@startuml
title <size: 30> US26 Class Diagram

interface Sensor {

}

interface DomainEntity{
    + getID() : DomainID
}

interface DomainID{
    + getID() : String
}

interface ValueObject<T> {
    + getValue() : T
}

class EnergyConsumptionSensor{
    - sensorName : SensorNameVO
    - sensorID : SensorIDVO
    - sensorTypeID : SensorTypeIDVO
    - deviceID : DeviceIDVO

    + EnergyConsumptionSensor(sensorName : SensorNameVO,deviceID : DeviceIDVO,sensorTypeID : SensorTypeIDVO)
    + getID() : SensorIDVO
    + getSensorName() : SensorNameVO
    + getSensorTypeID() : SensorTypeIDVO
    + getDeviceID() : DeviceIDVO
    + getReading(initialDate : String, finalDate : String, simHardware : SimHardware) : ValueObject<Integer>
}

class EnergyConsumptionValue{
    - primitiveValue : integer

    + EnergyConsumptionValue(reading: String)
    + getValue() : Integer
}

class SimHardware{
    + getValue(): String
}

class SensorNameVO{
    - sensorName : String
    + SensorNameVO(sensorName : String)
    + getValue() : String
}

class SensorIDVO{
    - identifier : UUID
    + SensorIDVO(identifier : UUID)
    + getID() : String
}


class SensorTypeIDVO{
    - sensorTypeID : String
    + SensorTypeIDVO(sensorTypeID : String)
    + getID() : String
}

class DeviceIDVO{
    - deviceID : UUID
    + DeviceIDVO(deviceID : UUID)
    + getID() : String
}


DomainEntity <|.. EnergyConsumptionSensor
Sensor <|.. EnergyConsumptionSensor
SimHardware <.. EnergyConsumptionSensor

SensorNameVO <.. EnergyConsumptionSensor
SensorIDVO *-- EnergyConsumptionSensor
EnergyConsumptionValue *--right EnergyConsumptionSensor
SensorTypeIDVO <.. EnergyConsumptionSensor
DeviceIDVO <.. EnergyConsumptionSensor

ValueObject <|.. SensorNameVO
DomainID  <|.. SensorIDVO
DomainID  <|.. SensorTypeIDVO
DomainID  <|.. DeviceIDVO

ValueObject <|.. EnergyConsumptionValue

@enduml